test/TestPhases/typechecker/valid/voidReturnFromVoidFunction.blc
function rrr(a: bool)
    
    if a then
        return
    else // wait once more
    
    end
    
end

@[EntryPoint]
activity start ()()
    rrr(true)
    await true
end