test/TestPhases/typechecker/invalid/returnCannotBeVoid2.blc
activity rrr(a: bool) returns int8
    await true
    if a then
        return 8
    else // wait once more
        await true
        return 7
    end
    await true //dead code
    return // <-???
end

@[EntryPoint]
activity start ()()
    run _ = rrr(true)
end